[gd_scene load_steps=5 format=3 uid="uid://b3b28dnrujmrf"]

[ext_resource type="Script" uid="uid://oamxv26k16qf" path="res://commons/scenes/mapobjects/AnnotationCubeController.gd" id="1_annotation_script"]
[ext_resource type="Shader" uid="uid://4hursyjcj1tb" path="res://commons/resourses/shaders/Grid.gdshader" id="2_grid_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_annotation"]
render_priority = 0
shader = ExtResource("2_grid_shader")
shader_parameter/modelColor = Color(0.2, 0.3, 0.6, 1)
shader_parameter/wireframeColor = Color(0, 1, 1, 1)
shader_parameter/emissionColor = Color(0, 1, 1, 1)
shader_parameter/width = 8.0
shader_parameter/blur = 0.5
shader_parameter/emission_strength = 3.0
shader_parameter/modelOpacity = 0.9

[sub_resource type="BoxMesh" id="BoxMesh_annotation"]

[node name="AnnotationCube" type="Node3D"]
script = ExtResource("1_annotation_script")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0.368608, 0)
visible = false
material_override = SubResource("ShaderMaterial_annotation")
mesh = SubResource("BoxMesh_annotation")

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
billboard = 1
text = "Map Name"
font_size = 48
outline_size = 4

[node name="DescriptionLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
billboard = 1
text = "Map description will appear here"
outline_size = 4
